--- a/Lab2/SzkolenieTechniczne2.Cinema/SzkolenieTechniczne2.Cinema.Infrastructure/SzkolenieTechniczne2.Cinema.Infrastructure.csproj
+++ b/Lab2/SzkolenieTechniczne2.Cinema/SzkolenieTechniczne2.Cinema.Infrastructure/SzkolenieTechniczne2.Cinema.Infrastructure.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <OutputType>Exe</OutputType>
   </PropertyGroup>
 
   <ItemGroup>
@@ -20,7 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\SzkolenieTechniczne2.Cinema.Domain\SzkolenieTechniczne2.Cinema.Domain.csproj" />
+    <ProjectReference Include="..\SzkolenieTechniczne2.Cinema\SzkolenieTechniczne2.Cinema.Infrastructure\SzkolenieTechniczne2.Cinema.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
