Fix missing files

--- a/Cinema/SzkolenieTechniczne2.Cinema/SzkolenieTechniczne2.Cinema.Domain/SzkolenieTechniczne2.Cinema.Domain.csproj
+++ b/Cinema/SzkolenieTechniczne2.Cinema/SzkolenieTechniczne2.Cinema.Domain/SzkolenieTechniczne2.Cinema.Domain.csproj
@@ -15,4 +15,8 @@
     <ProjectReference Include="..\SzkolenieTechniczne2.Cinema.Common\SzkolenieTechniczne2.Cinema.Common.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Command\Tickets\" />
+  </ItemGroup>
+
 </Project>
