--- a/PrzykladoweKolokwiumSzk2/PrzykladoweKolokwiumSzk2/PrzykladoweKolokwiumSzk2.csproj
+++ b/PrzykladoweKolokwiumSzk2/PrzykladoweKolokwiumSzk2/PrzykladoweKolokwiumSzk2.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -20,4 +20,7 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Repositories\" />
+  </ItemGroup>
 </Project>
